--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -6,7 +6,7 @@
 \chapter{Thermodynamic Exploration of Xenon/Krypton Separation}
 \vspace*{-1\baselineskip}
 
-\section{Simulation of Adsorption Equilibrium Properties}
+\section{Characterization of Adsorption Equilibrium Properties}
 
 \subsection{Geometrical descriptors}
 
@@ -14,19 +14,18 @@ Before going into the details of the adsorption properties themselves, we will f
 
 \subsubsection{Pore size}
 
-There are a multitude of pore sizes depending on the point where we measure it, all these pore sizes  compose what we call a pore size distribution. Some specific values are, however, uniquely defined and used to put a single value to characterize pore sized. The diameter of the largest sphere that can diffuse freely in the structure is called $D_f$. The diameter $D_{if}$ corresponds to the diameter of the largest included sphere along a free diffusion path; the diameter of the largest included sphere (not necessarily in a free diffusion path) is denoted $D_i$. The Figure~\ref{fgr:pore_size} illustrates the difference between these pore sizes. In thermodynamic studies we will often use the term ``largest cavity diameter'' (LCD) will be used instead of the largest included sphere $D_i$. The term ``pore limiting diameter'' will be used instead of $D_i$ especially when studying the transport effects with the nanopores.
+There are a multitude of pore sizes depending on the point where we measure it, all these pore sizes  compose what we call a pore size distribution. Some specific values are, however, uniquely defined and used to put a single value to characterize pore sized. The diameter of the largest sphere that can diffuse freely in the structure is called $D_f$. The diameter $D_{if}$ corresponds to the diameter of the largest included sphere along a free diffusion path; the diameter of the largest included sphere (not necessarily in a free diffusion path) is denoted $D_i$. The Figure~\ref{fgr:pore_size} illustrates the difference between these pore sizes. In thermodynamic studies we will often use the term ``largest cavity diameter'' (LCD) instead of the largest included sphere $D_i$. And, the term ``pore limiting diameter'' will be used instead of $D_i$ especially when studying the transport effects with the nanopores.
 
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.7\textwidth]{figures/2-thermo/pores.pdf}
-  \caption{Illustration of the different pore sizes PLD, LCD and GCD. \todo{use Di etc instead}}\label{fgr:pore_size}
+  \caption{Illustration of the different pore sizes $D_f$, $D_i$ and $D_if$. Note that in some materials $D_if$ is equal to $D_i$, when the largest included sphere is also accessible through a free diffusion path. }\label{fgr:pore_size}
 \end{figure}
 
-To define these pore sizes, we need to first set the radii of the framework atoms that will shape the surrounding pores. These radii can be defined using different methods, the default mode uses the Cambridge Crystallographic Data Centre's (CCDC) radii. This method is most commonly used in the literature. We also introduced another set of radii based on the universal forcefield~\cite{rappe1992} we use for molecular simulations. The determination of these radii are inspired by an approach developed by Hung et al.\cite{Hung_2021} The atomic radii are defined as the distance where the LJ potential reaches $3 k_\text{B} T/2$, for $T = \SI{298}{\kelvin}$. This type of definition can be more easily compared to the molecular simulations. For instance, we will use indexes to tell apart both methods --- LCD\e{UFF} will   LCD\e{CCDC}
-\todo{define two types of LCD here}
+To define these pore sizes, we need to first set the radii of the framework atoms that will shape the surrounding pores. These radii can be defined using different methods, the default mode uses the Cambridge Crystallographic Data Centre's (CCDC) radii. This method is most commonly used in the literature. We also introduced another set of radii based on the universal forcefield~\cite{rappe1992} we use for molecular simulations. The determination of these radii are inspired by an approach developed by Hung et al.\cite{Hung_2021} The atomic radii are defined as the distance where the LJ potential reaches $3 k_\text{B} T/2$, for $T = \SI{298}{\kelvin}$. This type of definition can be more easily compared to the molecular simulations. For instance, we will use indexes to tell apart both methods. For example, LCD\e{CCDC} corresponds to the standard definition of the LCD that uses the CCDC radii to run the Zeo++ software, while the LCD\e{UFF} is associated with the definition of the atomic radii dependent on the UFF forcefield.
 
 
-\subsubsection{Surface Area}
+\subsubsection{Surface area}
 
 The surface areas are calculated using a random sampling over the surface of the different atom surfaces. The algorithm counts only the points that do not overlap with another atom. For each atom we can therefore calculate an adsorbable surface. By summing up all the surfaces, we finally have the surface area. This ``rolling ball'' algorithm has been developed since 1973 by Shrake and Rupley.\cite{Shrake1973} the By defining a probe, the Voronoi tessellation defines the accessible and the non-accessible areas of the structure. Depending on where the surfaces are, they are either counted in the accessible or the non-accessible surface areas. In this chapter, we will use the accessible surface area defined by a probe of $1.2$~\si{\angstrom}; this is a computational equivalent of the experimental \ce{N2} BET surface area.
 
@@ -40,7 +39,38 @@ The surface areas are calculated using a random sampling over the surface of the
 
 The pore volume is calculated by random sampling of the accessible and inaccessible Voronoi cells. Similar algorithm, random sampling over a regular mesh. If the probe does not overlap with a framework atom, then it is counted in $N$. The ratio of this final $N$ and the total number of points sampled gives the fraction of the pore volume. This ratio is called the void fraction or the porosity. Using the Voronoi decomposition, we can also define the accessible and non-accessible Voronoi cells to reduce the space the Monte Carlo simulation need to sample for the surface area and the void fraction calculations.
 
-\subsection{Mixture adsorption simulations: Grand Canonical Monte Carlo}\label{sct:GCMC}
+
+\subsection{Intermolecular interaction energies}
+
+In most of the studies in thesis, we will consider rigid structures interacting with guest adsorbates; the intramolecular interactions will not play any role in the simulations since the ionic, chemical or metallic  bonds between the atoms of a same molecule are predefined at a given set of distances and remain the same. As discussed in the final chapter, this approximation can generate discrepancies between the theoretical model and the experiments. However, since the goal is to achieve screening approaches like the ones introduced in the first chapter, adding flexibility in the intramolecular interactions would reduce considerably the size of the database that could be screened. For these reasons, the term ``interaction energy'' will designate the guest--host and guest--guest intermolecular interactions mainly --- host--host interactions would compromise the assumption on the rigidity of the framework.
+
+In classical theory of molecular physics, the intermolecular interactions can be categorized in three different types according to their strength: (i) the ion--dipole and ion--induced dipole forces ($40$--$600$~\si{\kilo\joule\per\mol}), (ii) the hydrogen bondings ($10$--$50$~\si{\kilo\joule\per\mol}), and (iii) the Van der Waals forces ($1$--$10$~\si{\kilo\joule\per\mol}). Note that these energy values are only indicative and the interaction depends on the nature of the molecules, but it allows us to rank the different foreces according to their strength; and to complete the molecular interactions picture, we can add that the ionic and covalent bondings will always be stronger than any intermolecular interactions (over $100$~\si{\kilo\joule\per\mol}). The generic term ``Van der Waals interactions'' actually regroups three different concepts usually called Keesom, Debye and London interactions. The Keesom interaction focuses on the electrostatic interaction between permanent multipoles (representing the electronic density around the molecules),\cite{keesom1915second} while the Debye induction force corresponds to the interaction between a multipole of a molecule and an induced multipole of another one,\cite{Roberts_1938} and the London dispersion interaction occurs between instantaneous multipoles created by natural fluctuations in the electron density around polarizable atoms.\cite{london1930theorie,polanyi1932section} To quantify these interactions, we can consider dipole interactions since they are the most influential in the multipole expansion of the electron density. The Keesom interaction potential $V\e{K}$ can therefore be reduced to the dipole--dipole interaction, which depends on the inverse third power of the distance for fixed dipoles; but in fluid phases we are interested in, the average over all the angles is rather given by the inverse sixth power as described in the equation~\ref{eq:keesom} below:
+\begin{equation}\label{eq:keesom}
+  V\e{K} = -\dfrac{\mu_1^2\mu_2^2}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times\dfrac{1}{ 1.5k\e{B}T}
+\end{equation}
+where $\mu_1$ and $\mu_2$ are the dipole moments of the molecules $1$ and $2$, $\epsilon_0$ the vaccum dielectric permittivity and $\epsilon_r$ relative permittivity of the surrounding material, k\e{B} the Boltzmann constant, $T$ the temprature and $r$ the intermolecular distance. The Debye interaction potential $V\e{D}$ being reduced to the permanent dipole--induced dipole interactions can now be expressed using the electric polarizability $\alpha_1$ and $\alpha_2$ of the molecule $2$ as shown in equation~\ref{eq:debye}.
+\begin{equation}\label{eq:debye}
+  V\e{D} = -\dfrac{\mu_1^2\alpha_2 + \mu_2^2\alpha_1}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times\dfrac{1}{k\e{B}T}
+\end{equation}
+Finally, the London dispersion interaction potential $V\e{L}$ is now the fluctuating dipole--induced dipole interaction and can be expressed as follows:
+\begin{equation}\label{eq:london}
+  V\e{L} = -\dfrac{\alpha_1\alpha_2}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times1.5\dfrac{I_1 I_2}{I_1+I_2}
+\end{equation}
+where $I_1$ and $I_2$ are the first ionization energies. We can note that the Van der Waals potentials are all negative (attractive interaction) and depend on the inverse sixth power of the distance --- considering only the dipole moments. Before moving to the computational modelization of these long-distance intermolecular forces, we need to specify the repulsive force that occurs at very short distances; this force can be explained by the impossibility for electrons of both atoms to occupy the same quantum space as stated by Pauli in his exclusion principle.
+
+For the system we are studying in this thesis, the adsorption of noble gases in nanoporous materials, the guest--guest and guest--host interactions can be described by the induction and dispersion interactions only. We will use a simplistic model, the Lennard-Jones (LJ) potential $V\e{LJ}$,\cite{LJ_1924} that relies on a repulsive term for the Pauli exclusion principle and an attractive term to model the attractive Van der Waals component of the interaction, as shown below:
+\begin{equation}\label{eq:LJ}
+  V\e{LJ} = 4\epsilon \left(\left(\dfrac{\sigma}{r}\right)^{12} - \left(\dfrac{\sigma}{r}\right)^{6}\right)
+\end{equation}
+where $\epsilon$ is the depth of the well (minimal energy) and $\sigma$ is the distance at which the potential is zero. The forcefield defines the LJ parameters $\epsilon$ and $\sigma$ for either all atom pairs or only for the same type of atoms. For the commonly used universal forcefield (UFF),\cite{rappe1992} only the parameters for atoms of the same nature are defined and the parameters of the pair atoms can be induced using combining rules. In this thesis, we will use the UFF forcefield (because it performs well comparing with \emph{ab initio} forcefield \cite{McDaniel_2015}) and the Lorentz-Berthelot mixing rules to combine the LJ parameters --- it makes an arithmetic average of the $\sigma$ values (Lorentz rule) and a geometric one of the $\epsilon$ values (Berthelot rule). Finally, to reduce the computation time, we usually set a cutoff distance at which the LJ potential can be considered negligible. At this cutoff distance, we can for example apply a shift so that the energy equals zero at the cutoffs (discontinuity of energy), just truncate (discontinuity of the force), or use a tail switching function to make the tail converge smoothly to zero near the cutoff. To make it simple, in most of the simulations in the screenings, a shifting strategy combined with a cutoff of \SI{12}{\angstrom} have been used.
+
+Usually in adsorption simulations of other gas molecules containing partial charges, we need to calculate the Coulomb interaction between the partial charges of the host framework and those of the adsorbate --- in periodic systems, the Ewald summation can be used. For noble gases, these ion--dipole and dipole--dipole interactions does not occur due to the perfect neutrality of the molecules. However, we can argue that the ion--induced dipole is not taken into account in a simplified LJ potential. To complete the whole picture of the intermolecular interactions, we would need to study the energy inducted by the surrounding framework atoms's charged on the adsorbate. Several approaches have been developed in the literature to improve the description of the intermolecular interactions by coupling the LJ potentials with an induction potential.\cite{Lachet_1998,Becker_2017} 
+
+To wrap up this small seciton on the modelization of the intermolecular interactions in the adsorption simulations, I want to emphasize once more on the main modelization assumptions that could alter the accuracy of our method. First, the framework remains rigid during the whole simulation, which avoids the need for a molecular dynamics simulation of the framework to save time but also hide the effects of a known phenomenon.\cite{Witman_2017} Second, the polarizability of the adsorbate are not fully taken into account since the interaction with the charges of the framework are not considered; the difference in polarizability between xenon and krypton can be further exploited to enhence the selectivity even more, experimental studies suggest the key role of polar groups and open metal sites.\cite{Li_2019,Pei_2022,Perry_2014} And finally, the complex induction and dispersion interactions are described with a two-parameter model, which cannot capture all the subtlety of the differences between a same atom in different environments for instance; it could be possible to finetune these parameters in very specific cases, but the overall good performance \cite{McDaniel_2015} of the UFF forcefield needed in a screening process can induce small errors when looking at specific cases.
+These assumptions have been made to find the right trade-off of the speed of computation versus a detailed description of the physical phenomena at stake. 
+
+
+\subsection{Mixture adsorption: Grand Canonical Monte Carlo}\label{sct:GCMC}
 
 %intro 
 As explained before, we can think of adsorption as a gas--solid or liquid--solid interfacial phenomenon, the adsorbate phase fills the accessible pore volumes depending on the physical conditions the material is put under. No simple model can predict how the adsorbates would interact with the pore surface, how many of them can fit in, what configuration is the most stable, etc. To answer these questions, we can evaluate all possible adsorption configurations that would undeniably have different numbers of adsorbate, and only keep the most thermodynamically plausible ones. To do so, these configurations will have to follow a given probability distribution, the grand canonical ensemble probability for instance, because it allows the variation of the number of molecules (adsorbate molecules) and the total energy. With the help of a Monte Carlo simulation, we can vary the energy and the loading inside the pores so that the distribution of configurations $c$ follows this probability law: 
@@ -223,19 +253,19 @@ Now that we defined the exchange Gibbs free energy and an exchange enthalpy at a
   }
 \end{equation}
 
-Before concluding this methodological section, we need to note that the thermodynamic quantities associated to this newly defined adsorption exchange equilibrium can be defined at different pressures and different methodologies can be used to calculate them. At infinite dilution, we would preferably use Widom insertions and the adsorption free energies and enthalpies to deduce these exchange quantities; at higher pressure, we would use the GCMC calculation to define a free energy (via the loading values) and the isosteric adsorption heat to define them. In the following study, we will focus on only two pressures: the ambient pressure (at \SI{1}{\atm}) and the limit of zero loading (infinite dilution). At \SI{1}{\atm}, the previously defined quantities will have an index $1$ to differentiate them from the infinite dilution case where an index $0$ will be used; for example, $\Delta\e{ads}H\e{1}\ex{Xe/Kr}$, $\Delta\e{exc}G\e{1}\ex{Xe/Kr}$ or $s\e{1}\ex{Xe/Kr}$ at \SI{1}{\atm}, and $\Delta\e{ads}H\e{0}\ex{Xe/Kr}$, $\Delta\e{exc}G\e{0}\ex{Xe/Kr}$ or $s\e{0}\ex{Xe/Kr}$ at the low-pressure limit. One final note on the simulation details, to run the GCMC calculations and the Widom insertion, we used the Raspa2 software developed by Dubbeldam et al.\cite{dubbeldam2016} And the intermolecular Van der Waals interactions were described by a Lennard-Jones (LJ) potential with a cutoff distance of \SI{12}{\angstrom}. The LJ parameters of the framework atoms are given by the universal force field (UFF),\cite{rappe1992} and the guest atoms (xenon and krypton) have their LJ parameters taken from a previous screening study.\cite{Ryan_2010} All the MOFs described here are taken from the CoRE MOF 2019 database.\cite{Chung_2019}
+Before concluding this methodological section, we need to note that the thermodynamic quantities associated to this newly defined adsorption exchange equilibrium can be defined at different pressures and different methodologies can be used to calculate them. At infinite dilution, we would preferably use Widom insertions and the adsorption free energies and enthalpies to deduce these exchange quantities; at higher pressure, we would use the GCMC calculation to define a free energy (via the loading values) and the isosteric adsorption heat to define them. In the following study, we will focus on only two pressures: the ambient pressure (at \SI{1}{\atm}) and the limit of zero loading (infinite dilution). At \SI{1}{\atm}, the previously defined quantities will have an index $1$ to differentiate them from the infinite dilution case where an index $0$ will be used; for example, $\Delta\e{ads}H\e{1}\ex{Xe/Kr}$, $\Delta\e{exc}G\e{1}\ex{Xe/Kr}$ or $s\e{1}\ex{Xe/Kr}$ at \SI{1}{\atm}, and $\Delta\e{ads}H\e{0}\ex{Xe/Kr}$, $\Delta\e{exc}G\e{0}\ex{Xe/Kr}$ or $s\e{0}\ex{Xe/Kr}$ at the low-pressure limit. One final note on the simulation details, to run the GCMC calculations and the Widom insertion, we used the Raspa2 software developed by Dubbeldam et al.\cite{dubbeldam2016} And, the intermolecular Van der Waals interactions were described by a Lennard-Jones (LJ) potential with a cutoff distance of \SI{12}{\angstrom}. The LJ parameters of the framework atoms are given by the universal force field (UFF),\cite{rappe1992} and the guest atoms (xenon and krypton) have their LJ parameters taken from a previous screening study.\cite{Ryan_2010} All the MOFs described here are taken from the CoRE MOF 2019 database.\cite{Chung_2019}
 
 %%%%%%
 
-\section{Preliminary analyses}
+\section{Preliminary Analyses of the Separation Performance}
 
 As we have seen above in the existing literature, the computational screening of the nanoporous materials --- both existing frameworks and hypothetical structures --- for targeted adsorption properties has been the object of many studies, and several of those high-throughput screening studies have focused on noble gas separation, and Xe/Kr separation, in particular. For large-scale studies we have found that, in addition to the testing and validation of methodological developments, the screening aimed in most cases at one of three objectives: (i) to identify top performing materials for synthesis and/or characterization; (ii) to better understand the limits of possible performance, and the relationships and trade-offs between various metrics of performance (selectivity, uptake, etc); (iii) identify structure--property relationships, correlating separation performance with structural properties of the materials that can be more easily determined (i.e., at low computational cost). In this initial screening study of the thermodynamic quantities, we performed a screening of around 9,700 tridimensional structures of a preprocessed version of the CoRE MOF 2019-ASR (all solvent removed) database that are publicly available --- only the non-disordered structures and the structures with a cell volume smaller than \SI{20}{\nano\meter\cubed} (to limit the overall calculation time) were considered. We will focus on the different relationships of the Xe/Kr selectivity has with structural descriptors based on geometrical analyses, and then with different thermodynamic descriptors (free energy, enthalpy, entropy). 
 
-\subsection{Structure--Selectivity Relationships}\label{sct:geometry}
+\subsection{Structure--selectivity relationships}\label{sct:geometry}
 
-An adsorption separation process is primarily characterized by a pivotal performance metric called the selectivity we defined in equations~\ref{eq:selec} and~\ref{eq:selec_0}. By comparing this selectivity to geometrical descriptors calculated by the Zeo++ software,\cite{Zeo++} we want to characterize the materials that will most likely be selective for a separation of a 20:80 Xe/Kr mixture (to compare with most literature screenings on a mixture extracted from the air). Three structural descriptors have been calculated: the accessible surface area of a \ce{N2}-sized probe of \SI{1.2}{\angstrom}, the void fraction occupiable by a \SI{2.0}{\angstrom} radius probe (roughly the size of a xenon),\cite{vol_Ongari2017} and the diameter of the largest included sphere ($D_i$) using specially designed atom radii. Inspired by a recent work on the comparison of pore limiting diameters and self-diffusion coefficients,\cite{Hung_2021} we defined a list of Van der Waals radii to be read by the Zeo++ software (more details in \url{https://github.com/eren125/zeopp_radtable}). All Zeo++ calculations use an atomic radius that corresponds to the distance where the LJ potential reaches $3 k_\text{B} T/2$, for $T = \SI{298}{\kelvin}$.
+An adsorption separation process is primarily characterized by a pivotal performance metric called the selectivity we defined in equations~\ref{eq:selec} and~\ref{eq:selec_0}. By comparing this selectivity to geometrical descriptors calculated by the Zeo++ software,\cite{Zeo++} we want to characterize the materials that will most likely be selective for a separation of a 20:80 Xe/Kr mixture (to compare with most literature screenings on a mixture extracted from the air). Three structural descriptors have been calculated: the accessible surface area of a \ce{N2}-sized probe of \SI{1.2}{\angstrom}, the void fraction occupiable by a \SI{2.0}{\angstrom} radius probe (roughly the size of a xenon),\cite{vol_Ongari2017} and the diameter of the largest included sphere ($D_i$) using specially designed atom radii. Inspired by a recent work on the comparison of pore limiting diameters and self-diffusion coefficients,\cite{Hung_2021} we defined a list of Van der Waals radii to be read by the Zeo++ software (more details in \url{https://github.com/eren125/zeopp_radtable}). All Zeo++ calculations use an atomic radius that corresponds to the distance where the LJ potential reaches $3 k\e{B} T/2$, for $T = \SI{298}{\kelvin}$.
 
-\subsubsection{Xenon uptake}
+\subsubsection{Xenon uptake and selectivity}
 
 Before digging deeper in the structure--selectivity relationship, we will look at the relation between the xenon uptake (the number of adsorbed xenon in the GCMC simulation) and the selectivity at \SI{1}{\atm}. For instance, the xenon uptake could also be very important in a separation process, because it defines the working capacity of xenon produced by adsorption/desorption cycles. According to the Figures~\ref{fgr:sa} and \ref{fgr:vol}, first high xenon uptakes are associated with a high selectivity, but at some point very high selectivity is associated to lower uptakes. There seem to be an area where materials have selectivity over $100$ and Xe uptake around \SI{3}{\milli\mole\per\gram}, whereas an uptake over \SI{6}{\milli\mole\per\gram} can only be obtained for a selectivity between $10$ and $20$. One cannot maximize both uptake and selectivity metrics at the same time, a trade-off needs to be made when designing nanoporous materials for xenon/krypton separation.\cite{Zhang_2022} Different strategies have been implemented to optimize both metrics using mixed metrics such as the adsorbent performance score (APS).\cite{Solanki_2020}
 This trade-off can be rationalized by using the different structural descriptors (pore size, surface area and volume) we presented earlier. 
@@ -248,7 +278,7 @@ This trade-off can be rationalized by using the different structural descriptors
 
 Furthermore, even if we know that it is possible to optimize either the xenon uptake or the Xe/Kr selectivity, these very successful materials are very rare inside a given diverse dataset. In the histogram presented in Figure~\ref{fgr:3D_uptake}, the number of very selective materials is very low, same for the high-capacity materials. The most frequent materials have a selectivity between $1$ and $10$ and an uptake below \SI{3}{\milli\mole\per\gram}. These values can be considered the standard values of nanoporous material for Xe/Kr separation, which sets reference values to compare the various performance metrics and build a chemical intuition. A selectivity above $20$ is therefore considered rather high (even if the top materials have a much higher selectivity\cite{Pei_2022}) and a xenon uptake above \SI{4}{\milli\mole\per\gram} is also a pretty good adsorption capacity. The rarity of these top-performing materials gives the impression of searching a needle in a haystack, which has prompted some computational studies to design their algorithm to focus on finding the best materials rather than to describe equally all materials.\cite{Deshwal_2021,Glasby_2021} 
 
-\subsubsection{Surface areas}
+\subsubsection{Surface area and selectivity}
 
 \begin{figure}[h!]
   \centering
@@ -268,7 +298,7 @@ Looking at the 3D histogram on the Figure~\ref{fgr:3D_hist_sa_vol}, we can see t
   \caption{3D histograms of in a bidimensional space formed by the Xe/Kr selectivity and the surface areas (on the left) and formed by the Xe/Kr selectivity and the pore void fractions (on the right). A base 10 logarithm has been applied to the selectivity values. Bin size increased by 2.4 (on log scale) for the selectivity, by about $500$~\si{\square\meter\cubic\centi\meter} for the surface areas and by $0.125$ for the void fraction. }\label{fgr:3D_hist_sa_vol}
 \end{figure}
 
-\subsubsection{Void fraction}
+\subsubsection{Void fraction and selectivity}
 
 A similar analysis of the relationship with the void fraction was also carried out by Wilmer et al. (Figure 5 of Ref.~\cite{Wilmer_2012}) and an optimal value of the void fraction was found at around $0.8$. As we can see on the plots of the Figure~\ref{fgr:vol}, the materials with the highest value of Xe uptake have void fraction values around $0.5$, whereas the ones with the highest value of selectivity have much lower void fractions around $0.1$. The optimal range of void fraction for uptake would be between $0.2$ and $0.6$, whereas the one for selectivity is completely dissociated and is below $0.2$. We can characterize a bit more finely the selectivity using the void fraction than using the surface area, even though they both give very similar results. Both descriptors describe a rather dense material with a ``microporosity'', in the sense of the IUPAC\cite{Sing_1985}, which is characterized by medium-low pore volume and surface area.
 
@@ -281,7 +311,7 @@ A similar analysis of the relationship with the void fraction was also carried o
 
 By carrying out a similar analysis than for the surface areas bu for the void fraction using the Figure~\ref{fgr:3D_hist_sa_vol} (right), we can also identify different intervals of void fractions that correspond to highly selective materials. For instance, selectivity values above $92$ correspond to materials with a porosity between {$0$\%} and {$37.5$\%} (with a higher peak between {$12.5$\%} and {$25$\%}); selectivity values between $92$ and $35$ can be found in materials with a void fraction between {$0$\%} and {$50.0$\%} and much more frequently found for void fraction between {$12.5$\%} and {$37.5$\%}; selectivity values between $35$ and $13$ can be found in materials with a void fraction between {$0$\%} and {$75.0$\%} in a bell distribution centered around {$31$\%}. This center of distribution shifts toward higher values of the void fraction as lower selectivity values are considered, which suggests that a rather low porosity (below {$25$\%}) is preferable for selectivity performance. However, as we mentioned for surface areas, the void fraction is not a deterministic variable neither, we cannot predict the performance of the material solely based on this descriptor. Let us investigate whether adding another variable like the pore size as a joint variable wan better characterize the material's performance. 
 
-\subsubsection{Pore Size}
+\subsubsection{Pore Size and selectivity}
 
 \begin{figure}[h!]
   \centering
@@ -402,7 +432,7 @@ The main takeaway messages of this section are based on two relations. The first
 
 %%%%
 
-\section{Selectivity drop}
+\section{Selectivity Drop between Two Pressure Regimes}
 
 \subsection{Thermodynamic origins}\label{section:pressure}
 s
