--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -13,6 +13,10 @@ Final screening step, easy integration into the workflow of current sreenings
 
 \section{Noble gas polarisability}
 
+\todo{faire référence à 2-thermo partie sur les interactions}
+
+\todo{essayer d'ajouter la polarisabilité pour PEI et al. et Li et al.}
+
 Xe/Kr difference of polarisability
 Open Metal Sites/polar groups
 \todo{20220421\_pres}
