--- a/thesis.bib
+++ b/thesis.bib
@@ -3071,3 +3071,106 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {Localization: theory and experiment},
 	journal = {Rep. Prog. Phys.}
 }
+@article{keesom1915second,
+  title={The second viral coefficient for rigid spherical molecules, whose mutual attraction is equivalent to that of a quadruplet placed at their centre},
+  author={Keesom, WH},
+  journal={Proc. R. Acad. Sci},
+  volume={18},
+  pages={636--646},
+  year={1915}
+}
+@article{Roberts_1938,
+	doi = {10.1039/tf9383401346},
+	url = {https://doi.org/10.1039%2Ftf9383401346},
+	year = 1938,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {34},
+	pages = {1346},
+	author = {J. K. Roberts and W. J. C. Orr},
+	title = {Induced dipoles and the heat of adsorption of argon on ionic crystals},
+	journal = {Trans. Faraday Soc.}
+}
+@article{polanyi1932section,
+  title={Section III.—Theories of the adsorption of gases. A general survey and some additional remarks. Introductory paper to section III},
+  author={Polanyi, M},
+  journal={Transactions of the Faraday Society},
+  volume={28},
+  pages={316--333},
+  year={1932},
+  publisher={Royal Society of Chemistry}
+}
+@article{london1930theorie,
+  title={Zur theorie und systematik der molekularkr{\"a}fte},
+  author={London, Fritz},
+  journal={Zeitschrift f{\"u}r Physik},
+  volume={63},
+  number={3-4},
+  pages={245--279},
+  year={1930},
+  publisher={Springer}
+}
+@article{LJ_1924,
+	doi = {10.1098/rspa.1924.0081},
+	url = {https://doi.org/10.1098%2Frspa.1924.0081},
+	year = 1924,
+	month = {oct},
+	publisher = {The Royal Society},
+	author= {Lennard-Jones, John Edward},
+	volume = {106},
+	number = {738},
+	pages = {441--462},
+	title = {On the determination of molecular fields.{\textemdash}I. From the variation of the viscosity of a gas with temperature},
+	journal = {Proc. R. Soc. Lond. A}
+}
+@article{Lachet_1998,
+	doi = {10.1021/jp980946j},
+	url = {https://doi.org/10.1021%2Fjp980946j},
+	year = 1998,
+	month = {oct},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {102},
+	number = {46},
+	pages = {9224--9233},
+	author = {V{\'{e}}ronique Lachet and Anne Boutin and Bernard Tavitian and Alain H. Fuchs},
+	title = {Computational Study of $p$-Xylene/$m$-Xylene Mixtures Adsorbed in {NaY} Zeolite},
+	journal = {J. Phys. Chem. B}
+}
+@article{Becker_2017,
+	doi = {10.1021/acs.jpcc.6b12052},
+	url = {https://doi.org/10.1021%2Facs.jpcc.6b12052},
+	year = 2017,
+	month = {feb},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {121},
+	number = {8},
+	pages = {4659--4673},
+	author = {Tim M. Becker and Jurn Heinen and David Dubbeldam and Li-Chiang Lin and Thijs J. H. Vlugt},
+	title = {Polarizable Force Fields for {CO}$_{\text{2}}$ and {CH}$_{\text{4}}$ Adsorption in M-{MOF}-74},
+	journal = {J. Phys. Chem. C}
+}
+@article{Perry_2014,
+	doi = {10.1021/jp501495f},
+	url = {https://doi.org/10.1021%2Fjp501495f},
+	year = 2014,
+	month = {may},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {118},
+	number = {22},
+	pages = {11685--11698},
+	author = {John J. Perry and Stephanie L. Teich-McGoldrick and Scott T. Meek and Jeffery A. Greathouse and Maciej Haranczyk and Mark D. Allendorf},
+	title = {Noble Gas Adsorption in Metal{\textendash}Organic Frameworks Containing Open Metal Sites},
+	journal = {J. Phys. Chem. C}
+}
+@article{McDaniel_2015,
+	doi = {10.1021/jp511674w},
+	url = {https://doi.org/10.1021%2Fjp511674w},
+	year = 2015,
+	month = {feb},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {119},
+	number = {6},
+	pages = {3143--3152},
+	author = {Jesse G. McDaniel and Song Li and Emmanouil Tylianakis and Randall Q. Snurr and J. R. Schmidt},
+	title = {Evaluation of Force Field Performance for High-Throughput Screening of Gas Uptake in Metal{\textendash}Organic Frameworks},
+	journal = {J. Phys. Chem. C}
+}
